# sports-analytics-services

./: .dockerignore  .env.example  .gitignore  README.md  compose.env.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/helm/sports-analytics/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/sports-analytics/templates/: _helpers.tpl  analytics-api.yaml  analytics-worker.yaml  auth-service.yaml  configmap.yaml  ingress.yaml  main-service.yaml  media-service.yaml  migrate-job.yaml  networkpolicies.yaml  notifications-service.yaml  postgres-init-configmap.yaml  postgres.yaml  redis.yaml  secret.yaml
deploy/postgres/: init-databases.sh
services/analytics_service/: Dockerfile  pyproject.toml
services/analytics_service/src/: main.py
services/analytics_service/src/analytics/: queue.py  router.py
services/analytics_service/src/core/: config.py  exceptions.py  jwt_auth.py  middlewares.py  models.py
services/analytics_service/tests/: conftest.py  test_analytics_router.py
services/analytics_worker/: Dockerfile  pyproject.toml
services/analytics_worker/src/: worker_main.py
services/analytics_worker/src/analytics/: media_client.py  notifications_client.py  queue.py  worker.py
services/analytics_worker/src/core/: config.py  logging.py
services/analytics_worker/tests/: test_worker.py
services/auth_service/: Dockerfile  alembic.ini  pyproject.toml
services/auth_service/migrations/: env.py
services/auth_service/migrations/versions/: 20260512_0001_init_users.py
services/auth_service/src/: main.py
services/auth_service/src/auth/: dependencies.py  models.py  repository.py  router.py  service.py
services/auth_service/src/core/: config.py  db.py
services/auth_service/tests/: conftest.py  test_auth_api.py
services/main_service/: Dockerfile  pyproject.toml
services/main_service/src/: main.py
services/main_service/src/auth/: router.py
services/main_service/src/clients/: analytics_client.py  auth_client.py  media_client.py  notifications_client.py
services/main_service/src/core/: config.py  jwt_auth.py
services/main_service/src/notifications/: router.py
services/main_service/src/videos/: models.py  router.py
services/main_service/tests/: conftest.py  test_analytics_client.py  test_auth_client.py  test_auth_router.py  test_notifications_router.py  test_videos_router.py
services/media_service/: Dockerfile  alembic.ini  pyproject.toml
services/media_service/migrations/: env.py
services/media_service/migrations/versions/: 20260512_0001_init_media.py
services/media_service/src/: main.py
services/media_service/src/core/: config.py  security.py
services/media_service/src/frames/: dependencies.py  models.py  router.py  service.py
services/media_service/src/videos/: dependencies.py  models.py  router.py  service.py
services/media_service/tests/: conftest.py  test_media_routes.py
services/notifications_service/: Dockerfile  alembic.ini  pyproject.toml
services/notifications_service/migrations/: env.py
services/notifications_service/migrations/versions/: 20260512_0001_init_notifications.py
services/notifications_service/src/: main.py
services/notifications_service/src/core/: config.py  db.py
services/notifications_service/src/notifications/: dependencies.py  models.py  router.py  service.py
services/notifications_service/tests/: conftest.py  test_notifications_routes.py
